first draft logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="website">
   <!-- META ENDS -->
   <!-- FAVICON -->
-  <link rel="icon" href="./img/logo.png">
+  <link rel="icon" href="./img/Logo.png">
   <!-- STYLES BEGIN -->
   <link rel="stylesheet" href="./styles/homepage.css">
 
